--- a/using-app-router/tsconfig.json
+++ b/using-app-router/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "**/*.mts",
+    "initdb.js"
   ],
   "exclude": ["node_modules"]
 }
